tests/snapshots/examples_fixtures/type_system__failing__89_adt_generic_constructor_hm_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/89_adt_generic_constructor_hm_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `bad` does not match its type annotation.

  examples/type_system/failing/89_adt_generic_constructor_hm_mismatch.flx:4:32
  |
4 | let bad: Result<Int, String> = Ok("oops")
  |                                ^^^^^^^^^^
  |                                ---------- this value has type `Result<String, _>`

  |          ------------------- but `bad` was annotated as `Result<Int, String>`

Note:
  annotated type: Result<Int, String>
  value type: Result<String, _>

Help:
  Change `bad` to a `Result<Int, String>` value or update the annotation.
== stdout ==
<not executed>
